syntax = "proto3";

package pb;
option go_package = "./pkg/pb";


service AuthService {
    rpc UserSignup(UserSignupRequest) returns (UserSignupResponse){};
}

message UserSignupRequest {
    string first_name = 1;
    string last_name = 2;
    uint64 age = 3;
    string email = 4;
    string phone  = 5;
    string passord = 6;
}
 
message UserSignupResponse{
    uint64 user_id = 1;
}
