syntax = "proto3";

package pb;
option go_package = "./pkg/pb";



service AuthService {
    rpc UserSignup(UserSignupRequest) returns (UserSignupResponse){};
    rpc UserSignupVerify(UserSignupVerifyRequest) returns (UserSignupVerifyResponse){}
}

message UserSignupRequest {
    string first_name = 1;
    string last_name = 2;
    uint64 age = 3;
    string email = 4;
    string phone  = 5;
    string user_name = 6;
    string passord = 7;
}
 
message UserSignupResponse{
    string otp_id = 1;
}

// signup verify
message UserSignupVerifyRequest {
    string otp_id = 1;
    string otp_code = 2;
}
message UserSignupVerifyResponse {
    string acces_token = 1;
    string refresh_token = 2;
}